# mavros_apriltag_tracking

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: px4_config.yaml  tags.yaml
include/mavros_apriltag_tracking/: kf_tracker.h  mpc_tracker.h
install/: setup.sh
launch/: continuous_detection.launch  husky_empty_world.launch  mavros.launch  mpc_tracker.launch  px4.launch  tracker.launch
models/custom_husky/: husky.urdf.xacro
models/typhoon_h480/: typhoon_h480.sdf
msg/: KFState.msg
rviz/: rviz.rviz
scripts/: apriltag_setpoint_publisher.py  mavros_offboard_controller.py  start_tracking.sh  target_pose_publisher.py
src/: kf_tracker.cpp  kf_tracker_node.cpp  mpc_tracker.cpp  mpc_tracker_node.cpp
srv/: PIDGains.srv
worlds/: apriltag.world  empty.world
